Cleaning up file paths and fixed broken link for ai singapore cert

--- a/css/events.css
+++ b/css/events.css
@@ -50,16 +50,56 @@
     text-decoration: none;
     color: inherit;
     display: block;
-}
-
-.card-link:hover .card {
+    position: relative; /* Add position relative to establish a context for absolute positioning */
+  }
+  
+  .card-link:hover .card {
     transform: translateY(-7px) scale(1.02);
     color: #000;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition-delay: 0.05s;
-}
-
-.card {
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
+  }
+  
+  .card {
+    position: relative; /* Add this to make sure the description and iframe are positioned relative to the card */
+    overflow: hidden; /* Hide any overflow from the description */
+  }
+  
+  .card-description {
+    position: absolute;
+    bottom: -100%; /* Initially off the card */
+    left: 0;
+    width: 100%;
+    height: 30%;
+    max-height: 60%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8); /* Darker semi-transparent background */
+    color: #fff; /* White text color */
+    padding: 20px;
+    transition: bottom 0.3s ease;
+    box-sizing: border-box; /* Include padding in the width and height */
+  
+    scrollbar-width: thin;
+    scrollbar-color: #87cfd8 rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.1);
+  }
+  .card-description::-webkit-scrollbar {
+    width: 8px /* Width of the vertical scrollbar */
+  }
+  
+  .card-description::-webkit-scrollbar-thumb {
+    background-color: #87cfd8;
+    border-radius: 4px;
+  }
+  
+  .card-description::-webkit-scrollbar-thumb:hover {
+    background-color: #87cfd8;
+  }
+  
+  .card-description::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  
+  .card-link:hover .card-description {
+    bottom: 0; /* Show the description by moving it up */
+  }
+  
